fix: controlador duplicado
